added a new Gradle task, runApp, which is a more flexible task to run the application compare to the Payara Gradle Plugin